# librseq

./: .gitignore  .gitreview  LICENSE  Makefile  Makefile.am  README.md  bootstrap  configure.ac
.github/workflows/: ci.yml
LICENSES/: LGPL-2.1-only
doc/: Makefile.am
doc/man/: Makefile.am  rseq.2
extra/: README
extra/linux/: cpu_opv.h  do_on_cpu.h  rseq.h
include/: Makefile.am
include/rseq/: arch.h  compiler.h  cpu-op.h  mempool.h  percpu-alloc.h  percpu-counter-tree.h  percpu-counter.h  percpu-op.h  pseudocode.h  rseq-abi.h  rseq-arm-bits.h  rseq-arm.h  rseq-arm64-bits.h  rseq-arm64.h  rseq-bits-reset.h  rseq-bits-template.h  rseq-generic-thread-pointer.h  rseq-mips-bits.h  rseq-mips.h  rseq-ppc-bits.h  rseq-ppc-thread-pointer.h  rseq-ppc.h  rseq-pseudocode.h  rseq-riscv-bits.h  rseq-riscv.h  rseq-s390-bits.h  rseq-s390.h  rseq-skip.h  rseq-thread-pointer.h  rseq-x86-bits.h  rseq-x86-thread-pointer.h  rseq-x86.h  rseq.h  thread-pointer.h
include/rseq/arch/: aarch64.h  arm.h  loongarch.h  mips.h  ppc.h  riscv.h  s390.h  x86.h
include/rseq/arch/arm/: bits.h
include/rseq/arch/generic/: common.h  thread-pointer.h
include/rseq/arch/loongarch/: bits.h  thread-pointer.h
include/rseq/arch/riscv/: bits.h
include/rseq/arch/x86/: bits.h
m4/: ae_config_feature.m4  ax_cxx_compile_stdcxx.m4  ax_pthread.m4  pprint.m4
src/: Makefile.am  cpu-op.c  do-on-cpu-insn.h  librseq.pc.in  percpu-counter-tree.c  percpu-counter.c  percpu-op.c  rcu.c  rcu.h  rseq-alloc-utils.h  rseq-mempool.c  rseq-percpu-alloc.c  rseq-reg-helper.c  rseq-utils.h  rseq.c  smp.c
tests/: Makefile  Makefile.am  basic_percpu_benchmark.c  basic_percpu_benchmark_cxx.cpp  basic_percpu_ops_test.c  basic_percpu_ops_test_cxx.cpp  basic_test.c  basic_test_cxx.cpp  disable-rseq-syscall.c  fork_test.c  fork_test_cxx.cpp  mempool_cow_race_test.c  mempool_cow_race_test_cxx.cpp  mempool_test.c  mempool_test_cxx.cpp  no_syscall_test.c  no_syscall_test_cxx.cpp  param_test.c  param_test_cxx.cpp  percpu_counter_benchmark.c  percpu_counter_test.c  percpu_lru_test.c  percpu_lru_test_cxx.cpp  prio-heap.c  prio-heap.h  rseq_biased_lock.c  rseq_biased_lock.h  run_fork_test.tap  run_fork_test_cxx.tap  run_no_syscall_test.tap  run_no_syscall_test_cxx.tap  run_param_test.tap  run_param_test_cxx.tap  run_syscall_errors_test.tap  run_syscall_errors_test_cxx.tap  run_unregistered_test.tap  run_unregistered_test_cxx.tap  syscall_errors_test.c  syscall_errors_test_cxx.cpp  test_rseq_biased_lock.c  (+2 more)
tests/image/ubuntu/: Dockerfile  run.sh
tests/unit/: .gitignore  Makefile.am  arch-mo-cxx.cpp  arch-mo.c
tests/utils/: Makefile.am  tap.c  tap.h  utils.sh
