# SPDX-License-Identifier: MIT
#
# Copyright (C) 2019 Michael Jeanson <mjeanson@efficios.com>
#

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	doc \
	include \
	src \
	tests

dist_doc_DATA = README.md

EXTRA_DIST = \
	LICENSE \
	LICENSES/BSD-2-Clause \
	LICENSES/GPL-2.0 \
	LICENSES/GPL-3.0 \
	LICENSES/LGPL-2.1-only \
	LICENSES/MIT
