# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2022 EfficiOS Inc.

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	doc \
	include \
	src \
	tests

dist_doc_DATA = README.md

EXTRA_DIST = \
	LICENSE \
	LICENSES/LicenseRef-Autoconf-exception-macro.txt \
	LICENSES/BSD-2-Clause.txt \
	LICENSES/FSFAP.txt \
	LICENSES/GPL-2.0-or-later.txt \
	LICENSES/GPL-3.0-or-later.txt \
	LICENSES/LGPL-2.1-or-later.txt \
	LICENSES/Linux-syscall-note.txt \
	LICENSES/MIT.txt
