# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2022 EfficiOS Inc.

nobase_include_HEADERS = \
	rseq/compiler.h \
	rseq/rseq.h \
	rseq/rseq-abi.h \
	rseq/rseq-bits-template.h \
	rseq/rseq-bits-reset.h \
	rseq/rseq-arm.h \
	rseq/rseq-arm-bits.h \
	rseq/rseq-arm64.h \
	rseq/rseq-arm64-bits.h \
	rseq/rseq-mips.h \
	rseq/rseq-mips-bits.h \
	rseq/rseq-ppc.h \
	rseq/rseq-ppc-bits.h \
	rseq/rseq-riscv.h \
	rseq/rseq-riscv-bits.h \
	rseq/rseq-s390.h \
	rseq/rseq-s390-bits.h \
	rseq/rseq-x86.h \
	rseq/rseq-x86-bits.h \
	rseq/rseq-generic-thread-pointer.h \
	rseq/rseq-ppc-thread-pointer.h \
	rseq/rseq-x86-thread-pointer.h \
	rseq/rseq-thread-pointer.h
