# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2022-2024 EfficiOS Inc.

nobase_include_HEADERS = \
	rseq/arch/aarch64/bits.h \
	rseq/arch/aarch64.h \
	rseq/arch/arm/bits.h \
	rseq/arch/arm.h \
	rseq/arch/generic/common.h \
	rseq/arch/generic/thread-pointer.h \
	rseq/arch/mips/bits.h \
	rseq/arch/mips.h \
	rseq/arch/ppc/bits.h \
	rseq/arch/ppc.h \
	rseq/arch/ppc/thread-pointer.h \
	rseq/arch/riscv/bits.h \
	rseq/arch/riscv.h \
	rseq/arch/riscv/thread-pointer.h \
	rseq/arch/s390/bits.h \
	rseq/arch/s390.h \
	rseq/arch/templates/bits.h \
	rseq/arch/templates/bits-reset.h \
	rseq/arch/x86/bits.h \
	rseq/arch/x86.h \
	rseq/arch/x86/thread-pointer.h \
	rseq/abi.h \
	rseq/arch.h \
	rseq/compiler.h \
	rseq/inject.h \
	rseq/mempool.h \
	rseq/pseudocode.h \
	rseq/rseq.h \
	rseq/thread-pointer.h \
	rseq/utils.h
